Got Google OAuth Working, Moved Routes, Deleted AuthTest
